--- a/templates/pictures/index.html
+++ b/templates/pictures/index.html
@@ -1,10 +1,44 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+
+    <!-- bootstrap -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/static/js/bootstrap.bundle.min.js"></script>
+
+    <title>Pictures</title>
 </head>
 <body>
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        {% for foo in dic %}
+            <div class="col-12 col-xxl-2 col-xl-3 col-lg-4 col-md-6">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'Picture/HDdeal/903198_waifu2x_2x_3n_jpg.png' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ foo.pic_title }}</h5>
+                        <p class="card-text">{{ foo.pic_path }}</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    <!--<p>窗口宽度: <span id = width></span></p>-->
+</div>
+<!--<script>
+    var widthoutput = document.querySelector('#width');
+    function resize(){
+        widthoutput.textContent = window.innerWidth;
+    }
+    window.onresize = resize;
+    resize();
+</script>-->
 </body>
 </html>
