--- a/templates/pictures/index.html
+++ b/templates/pictures/index.html
@@ -18,33 +18,40 @@
 <div class="container-fluid">
     <div class="row">
         {% for foo in dic %}
-            <div class="col-12 col-xxl-2 col-xl-3 col-lg-4 col-md-6">
+            <div class="col-12 col-xxl-1 col-xl-3 col-lg-4 col-md-6">
                 <div class="card">
-                    <img class="card-img-top" src="{{ foo.pic_cover }}" style="height:300px;object-fit: cover">
-                    <div class="card-body d-grid gap-2" >
-                        <!--<h6 class="card-title d-grid gap-2">{{ foo.pic_title }}</h6>-->
+                    <img class="card-img-bottom" src="http://192.168.1.107:8080/files/Pictures and Photobooks/2.jpg" data-src="{{ foo.pic_cover }}" style="max-height:800px;object-fit: cover">
+                    <div class="card-footer d-grid gap-2" style="padding:0">
                         <form action="content/" method="post" class="d-grid gap-2">
                             <div>
                                 <label for="path" style="display:none"></label>
                                 <input name="path" id="path" value="{{ foo.pic_path }}" style="display:none">
                             </div>
                             {% csrf_token %}
-                            <button type="submit" class="btn btn-primary">Browse</button>
+                            <button type="submit" class="btn btn-primary btn-block">{{ foo.pic_title }}</button>
                         </form>
                     </div>
                 </div>
             </div>
         {% endfor %}
     </div>
-    <!--<p>窗口宽度: <span id = width></span></p>-->
 </div>
-<!--<script>
-    var widthoutput = document.querySelector('#width');
-    function resize(){
-        widthoutput.textContent = window.innerWidth;
+<script>
+    function query(selector) {
+        return Array.from(document.querySelectorAll(selector));
     }
-    window.onresize = resize;
-    resize();
-</script>-->
+
+    const io = new IntersectionObserver(function (items) {
+        items.forEach(function (item) {
+            const target = item.target;
+            if (target.getAttribute('src') === 'http://192.168.1.107:8080/files/Pictures and Photobooks/2.jpg') {
+                target.src = target.getAttribute('data-src');
+            }
+        })
+    });
+    query('img').forEach(function(item) {
+        io.observe(item);
+    });
+</script>
 </body>
 </html>
