--- a/templates/pictures/content.html
+++ b/templates/pictures/content.html
@@ -7,16 +7,14 @@
     <script src="/static/js/bootstrap.bundle.min.js"></script>
 
 </head>
-<body>
-<div class="container-fluid">
+<body class="bg-dark">
+<div class="container">
     <div class="row">
         {% for foo in path %}
-            <div class="col-12 col-xxl-4 col-xl-6 col-lg-6 col-md-12">
-                <div class="card">
-                    <a href="{{ foo }}">
-                        <img src="{{ foo }}" class="card-img-bottom" loading="lazy" alt="Loading">
-                    </a>
-                </div>
+            <div class="col-12 col-xxl-4 col-xl-6 col-lg-12 col-md-12">
+                <a href="{{ foo }}">
+                    <img src="{{ foo }}" class="card-img-bottom" loading="lazy" alt="Loading">
+                </a>
             </div>
         {% endfor %}
     </div>
