--- a/templates/test.html
+++ b/templates/test.html
@@ -1,295 +1,36 @@
-<!DOCTYPE html>
-<html>
-  <head lang="en">
-    <meta charset="UTF-8" />
-    <title>
-      Fade in effect - Lazyload demos
-    </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-      body {
-        font-family: sans-serif;
-      }
-      .intro {
-        margin: 1em 0;
-      }
-      p {
-        margin: 0.3em 0;
-      }
-      ul,
-      li {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-      }
+<!doctype html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Background</title>
+</head>
+<body>
+<div style="position: absolute;top: 50%;left: 0;width: 100%;text-align: center;margin: -5.5vw 0 0 0;z-index: 100;font-size: 20px;text-align: center;color: #fff;font-family: 'Microsoft Yahei';">js代码(www.jsdaima.com)是IT资源下载与IT技能学习平台。<br />Powered by <a style="color:red;text-decoration: none;font-family: 'Microsoft Yahei';" href="http://www.jsdaima.com/" target="_blank">www.jsdaima.com</a><br/><span style="font-size: 14px;">* 本段文字信息可自行修改或删除 *</span></div>
+<!--结束-->
 
-      img {
-        display: block;
-        border: 0;
-        width: 220px;
-        height: 280px;
-      }
-      img.lazy {
-        opacity: 0;
-      }
-      img:not(.initial) {
-        transition: opacity 1s;
-      }
-      img.initial,
-      img.loaded,
-      img.error {
-        opacity: 1;
-      }
-
-      img:not([src]) {
-        visibility: hidden;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Fade in effect demo</h1>
-    <div id="results1" class="results">
-      <ul>
-        <li>
-          <a href="#/it/donna/stivaletti_cod44721746jj.html"
-            ><img
-              alt="Stivaletti"
-              src="https://via.placeholder.com/440x560?text=Img+01"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/open-toe_cod44740806jx.html"
-            ><img
-              alt="Open toe"
-              src="https://via.placeholder.com/440x560?text=Img+02"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/sneakers-tennis-shoes-basse_cod44735977gr.html"
-            ><img
-              class="lazy"
-              alt="Sneakers &amp; Tennis"
-              data-src="https://via.placeholder.com/440x560?text=Img+03"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/sneakers-tennis-shoes-basse_cod44738717am.html"
-            ><img
-              class="lazy"
-              alt="Sneakers &amp; Tennis shoes basse"
-              data-src="https://via.placeholder.com/440x560?text=Img+04"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/sneakers-tennis-shoes-alte_cod44739940cb.html"
-            ><img
-              class="lazy"
-              alt="Sneakers &amp; Tennis shoes alte"
-              data-src="https://via.placeholder.com/440x560?text=Img+05"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/sneakers-tennis-shoes-alte_cod44740860xg.html"
-            ><img
-              class="lazy"
-              alt="Sneakers &amp; Tennis shoes alte"
-              data-src="https://via.placeholder.com/440x560?text=Img+06"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/sneakers-tennis-shoes-basse_cod44738719vn.html"
-            ><img
-              class="lazy"
-              alt="Sneakers &amp; Tennis shoes basse"
-              data-src="https://via.placeholder.com/440x560?text=Img+07"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/sneakers-tennis-shoes-basse_cod44739938wk.html"
-            ><img
-              class="lazy"
-              alt="Sneakers &amp; Tennis shoes basse"
-              data-src="https://via.placeholder.com/440x560?text=Img+08"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/stivali_cod44736534fq.html"
-            ><img
-              class="lazy"
-              alt="Stivali"
-              data-src="https://via.placeholder.com/440x560?text=Img+09"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/stivali_cod44735388ui.html"
-            ><img
-              class="lazy"
-              alt="Stivali"
-              data-src="https://via.placeholder.com/440x560?text=Img+10"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/stivaletti_cod44739165ev.html"
-            ><img
-              class="lazy"
-              alt="Stivaletti"
-              data-src="https://via.placeholder.com/440x560?text=Img+11"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/stivaletti_cod44739454hf.html"
-            ><img
-              class="lazy"
-              alt="Stivaletti"
-              data-src="https://via.placeholder.com/440x560?text=Img+12"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/stivali_cod44719480km.html"
-            ><img
-              class="lazy"
-              alt="Stivali"
-              data-src="https://via.placeholder.com/440x560?text=Img+13"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/stivaletti_cod44719687td.html"
-            ><img
-              class="lazy"
-              alt="Stivaletti"
-              data-src="https://via.placeholder.com/440x560?text=Img+14"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/decollete_cod44721899ng.html"
-            ><img
-              class="lazy"
-              alt="Décolleté"
-              data-src="https://via.placeholder.com/440x560?text=Img+15"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/mocassini_cod44721744sl.html"
-            ><img
-              class="lazy"
-              alt="Mocassini"
-              data-src="https://via.placeholder.com/440x560?text=Img+16"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/stivaletti_cod44716730kr.html"
-            ><img
-              class="lazy"
-              alt="Stivaletti"
-              data-src="https://via.placeholder.com/440x560?text=Img+17"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/decollete_cod44718734xl.html"
-            ><img
-              class="lazy"
-              alt="Décolleté"
-              data-src="https://via.placeholder.com/440x560?text=Img+18"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-          <a href="#/it/donna/decollete_cod44721796uk.html"
-            ><img
-              class="lazy"
-              alt="Décolleté"
-              data-src="https://via.placeholder.com/440x560?text=Img+19"
-              width="220"
-              height="280"
-          /></a>
-        </li>
-        <li>
-            <img
-              class="lazy"
-              alt="Francesine"
-              data-src="https://via.placeholder.com/440x560?text=Img+20"
-              width="220"
-              height="280"
-          />
-        </li>
-      </ul>
-    </div>
-    <script src="../static/js/lazyload.min.js"></script>
-    <script>
-      (function () {
-        function logElementEvent(eventName, element) {
-          console.log(Date.now(), eventName, element.getAttribute("data-src"));
+<div class="stars"></div>
+<script>
+    $(document).ready(function(){
+        var stars=800;
+        var $stars=$(".stars");
+        var r=800;
+        for(var i=0;i<stars;i++){
+            var $star=$("<div/>").addClass("star");
+            $stars.append($star);
         }
+        $(".star").each(function(){
+            var cur=$(this);
+            var s=0.2+(Math.random()*1);
+            var curR=r+(Math.random()*300);
+            cur.css({
+                transformOrigin:"0 0 "+curR+"px",
+                transform:" translate3d(0,0,-"+curR+"px) rotateY("+(Math.random()*360)+"deg) rotateX("+(Math.random()*-50)+"deg) scale("+s+","+s+")"
 
-        var callback_enter = function (element) {
-          logElementEvent("🔑 ENTERED", element);
-        };
-        var callback_exit = function (element) {
-          logElementEvent("🚪 EXITED", element);
-        };
-        var callback_loading = function (element) {
-          logElementEvent("⌚ LOADING", element);
-        };
-        var callback_loaded = function (element) {
-          logElementEvent("👍 LOADED", element);
-        };
-        var callback_error = function (element) {
-          logElementEvent("💀 ERROR", element);
-        };
-        var callback_finish = function () {
-          logElementEvent("✔️ FINISHED", document.documentElement);
-        };
-        var callback_cancel = function (element) {
-          logElementEvent("🔥 CANCEL", element);
-        };
-
-        var ll = new LazyLoad({
-          threshold: 0,
-          // Assign the callbacks defined above
-          callback_enter: callback_enter,
-          callback_exit: callback_exit,
-          callback_cancel: callback_cancel,
-          callback_loading: callback_loading,
-          callback_loaded: callback_loaded,
-          callback_error: callback_error,
-          callback_finish: callback_finish
-        });
-      })();
-    </script>
-  </body>
+            })
+        })
+    })</script>
+</body>
 </html>
