--- a/templates/pictures/add.html
+++ b/templates/pictures/add.html
@@ -15,7 +15,7 @@
             <input name="root_path" id="root_path" value="D:\H\Pictures\Manga" style="display:none">
         </div>
         {% csrf_token %}
-        <button type="submit" class="btn btn-primary btn-block" style="font-size:15px">{{ foo.pic_title }}</button>
+        <button type="submit" class="btn btn-primary btn-block" style="font-size:15px">Test</button>
     </form>
 </div>
 </body>
