--- a/templates/pictures/Navigate.html
+++ b/templates/pictures/Navigate.html
@@ -19,10 +19,10 @@
             <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                 <div class="row">
                     <div class="card col-12 col-xxl-1 col-xl-3 col-lg-4 col-md-6">
-                        <a href="add/"><button class="btn btn-success">LO</button></a>
+                        <a href="add/"><button class="btn btn-success">Submit</button></a>
                     </div>
                     <div class="card col-12 col-xxl-1 col-xl-3 col-lg-4 col-md-6">
-                        <button class="btn btn-success">Test</button>
+                        <a href="index/"><button class="btn btn-success">Test</button></a>
                     </div>
                     <div class="card col-12 col-xxl-1 col-xl-3 col-lg-4 col-md-6">
                         <button class="btn btn-success">Test</button>
